[package]
name = "rnet"
version = "0.1.0"
authors = ["djdis"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binaryutils = { git = "https://github.com/djdisodo/binaryutils-rust" }
itoa = "0.4"
atoi = "0.3.1"
rust-sort = "0.1.4"
